# repolens

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  compose.yaml  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_create_analysis_lifecycle.py  0002_add_acquisition_failures.py  0003_create_analysis_results.py
apps/api/src/repolens_api/: __init__.py  analysis_results.py  api.py  celery_app.py  database.py  errors.py  lifecycle.py  main.py  models.py  repository_urls.py  schemas.py  services.py  settings.py  tasks.py
apps/api/src/repolens_api/acquisition/: __init__.py  git.py  (+6 more)
apps/api/tests/: conftest.py  test_acquisition_git.py  test_acquisition_processes.py  test_acquisition_service.py  test_acquisition_validation.py  test_acquisition_workspace.py  test_analyses_api.py  test_analysis_result_migration.py  test_analysis_result_persistence.py  test_analysis_results.py  test_analysis_results_api.py  test_celery.py  test_code_structure_javascript.py  test_code_structure_python.py  test_code_structure_service.py  test_health.py  test_inventory_content.py  test_inventory_entrypoints.py  test_inventory_important_files.py  test_inventory_languages.py  test_inventory_manifests.py  test_inventory_scanner.py  test_inventory_service.py  test_inventory_technologies.py  test_lifecycle.py  test_quality_findings.py  test_repository_urls.py  test_services.py  test_settings.py  test_worker_inventory_integration.py
(+44 files in other folders)
