[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "repolens-api"
version = "0.1.0"
description = "The RepoLens HTTP API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "pydantic-settings>=2.7,<3",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx2>=2.7,<3",
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/repolens_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ANN", "B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true
pretty = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
